SONAR-12002 Fail startup if JRE < 11