@@ -19,9 +19,7 @@
  */
 package org.sonar.application.command;
 
-import com.tngtech.java.junit.dataprovider.DataProvider;
 import com.tngtech.java.junit.dataprovider.DataProviderRunner;
-import com.tngtech.java.junit.dataprovider.UseDataProvider;
 import java.io.File;
 import java.io.IOException;
 import java.util.Properties;
@@ -31,13 +29,10 @@ import org.junit.rules.ExpectedException;
 import org.junit.rules.TemporaryFolder;
 import org.junit.runner.RunWith;
 import org.sonar.process.Props;
-import org.sonar.process.System2;
 import org.sonar.test.ExceptionCauseMatcher;
 
 import static org.apache.commons.lang.RandomStringUtils.randomAlphanumeric;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
 
 @RunWith(DataProviderRunner.class)
 public class EsJvmOptionsTest {
@@ -49,10 +44,9 @@ public class EsJvmOptionsTest {
   private Properties properties = new Properties();
 
   @Test
-  @UseDataProvider("java8or11")
-  public void constructor_sets_mandatory_JVM_options_on_Java_8_and_11(System2 system2) throws IOException {
+  public void constructor_sets_mandatory_JVM_options_on_Java_11() throws IOException {
     File tmpDir = temporaryFolder.newFolder();
-    EsJvmOptions underTest = new EsJvmOptions(system2, new Props(properties), tmpDir);
+    EsJvmOptions underTest = new EsJvmOptions(new Props(properties), tmpDir);
 
     assertThat(underTest.getAll())
       .containsExactly(
@@ -78,126 +72,42 @@ public class EsJvmOptionsTest {
   }
 
   @Test
-  @UseDataProvider("java8or11")
-  public void constructor_does_not_force_boostrap_checks_if_sonarqube_property_is_true(System2 system2) throws IOException {
+  public void constructor_does_not_force_boostrap_checks_if_sonarqube_property_is_true() throws IOException {
     properties.put("sonar.es.bootstrap.checks.disable", "true");
     File tmpDir = temporaryFolder.newFolder();
-    EsJvmOptions underTest = new EsJvmOptions(system2, new Props(properties), tmpDir);
+    EsJvmOptions underTest = new EsJvmOptions(new Props(properties), tmpDir);
 
     assertThat(underTest.getAll())
       .doesNotContain("-Des.enforce.bootstrap.checks=true");
   }
 
   @Test
-  @UseDataProvider("java8or11")
-  public void constructor_forces_boostrap_checks_if_jdbc_url_property_does_not_exist(System2 system2) throws IOException {
+  public void constructor_forces_boostrap_checks_if_jdbc_url_property_does_not_exist() throws IOException {
     File tmpDir = temporaryFolder.newFolder();
-    EsJvmOptions underTest = new EsJvmOptions(system2, new Props(properties), tmpDir);
+    EsJvmOptions underTest = new EsJvmOptions(new Props(properties), tmpDir);
 
     assertThat(underTest.getAll())
       .contains("-Des.enforce.bootstrap.checks=true");
   }
 
   @Test
-  @UseDataProvider("java8or11")
-  public void constructor_forces_boostrap_checks_if_jdbc_url_property_is_not_h2(System2 system2) throws IOException {
+  public void constructor_forces_boostrap_checks_if_jdbc_url_property_is_not_h2() throws IOException {
     properties.put("sonar.jdbc.url", randomAlphanumeric(53));
     File tmpDir = temporaryFolder.newFolder();
-    EsJvmOptions underTest = new EsJvmOptions(system2, new Props(properties), tmpDir);
+    EsJvmOptions underTest = new EsJvmOptions(new Props(properties), tmpDir);
 
     assertThat(underTest.getAll())
       .contains("-Des.enforce.bootstrap.checks=true");
   }
 
   @Test
-  @UseDataProvider("java8or11")
-  public void constructor_does_not_force_boostrap_checks_if_jdbc_url_property_contains_h2(System2 system2) throws IOException {
+  public void constructor_does_not_force_boostrap_checks_if_jdbc_url_property_contains_h2() throws IOException {
     properties.put("sonar.jdbc.url", "jdbc:h2:tcp://ffoo:bar/sonar");
     File tmpDir = temporaryFolder.newFolder();
-    EsJvmOptions underTest = new EsJvmOptions(system2, new Props(properties), tmpDir);
+    EsJvmOptions underTest = new EsJvmOptions(new Props(properties), tmpDir);
 
     assertThat(underTest.getAll())
       .doesNotContain("-Des.enforce.bootstrap.checks=true");
-  }
-
-  @DataProvider
-  public static Object[][] java8or11() {
-    System2 java8 = mock(System2.class);
-    when(java8.isJava9()).thenReturn(false);
-    when(java8.isJava10()).thenReturn(false);
-    System2 java10 = mock(System2.class);
-    when(java10.isJava9()).thenReturn(false);
-    when(java10.isJava10()).thenReturn(false);
-    return new Object[][] {
-      {java8},
-      {java10}
-    };
-  }
-
-  @Test
-  public void constructor_sets_mandatory_JVM_options_on_Java_9() throws IOException {
-    System2 java9 = mock(System2.class);
-    when(java9.isJava9()).thenReturn(true);
-    when(java9.isJava10()).thenReturn(false);
-
-    File tmpDir = temporaryFolder.newFolder();
-    EsJvmOptions underTest = new EsJvmOptions(java9, new Props(properties), tmpDir);
-
-    assertThat(underTest.getAll())
-      .containsExactly(
-        "-XX:+UseConcMarkSweepGC",
-        "-XX:CMSInitiatingOccupancyFraction=75",
-        "-XX:+UseCMSInitiatingOccupancyOnly",
-        "-Des.networkaddress.cache.ttl=60",
-        "-Des.networkaddress.cache.negative.ttl=10",
-        "-XX:+AlwaysPreTouch",
-        "-Xss1m",
-        "-Djava.awt.headless=true",
-        "-Dfile.encoding=UTF-8",
-        "-Djna.nosys=true",
-        "-XX:-OmitStackTraceInFastThrow",
-        "-Dio.netty.noUnsafe=true",
-        "-Dio.netty.noKeySetOptimization=true",
-        "-Dio.netty.recycler.maxCapacityPerThread=0",
-        "-Dlog4j.shutdownHookEnabled=false",
-        "-Dlog4j2.disable.jmx=true",
-        "-Djava.io.tmpdir=" + tmpDir.getAbsolutePath(),
-        "-XX:ErrorFile=../logs/es_hs_err_pid%p.log",
-        "-Djava.locale.providers=COMPAT",
-        "-Des.enforce.bootstrap.checks=true");
-  }
-
-  @Test
-  public void constructor_sets_mandatory_JVM_options_on_Java_10() throws IOException {
-    System2 java10 = mock(System2.class);
-    when(java10.isJava9()).thenReturn(false);
-    when(java10.isJava10()).thenReturn(true);
-
-    File tmpDir = temporaryFolder.newFolder();
-    EsJvmOptions underTest = new EsJvmOptions(java10, new Props(properties), tmpDir);
-
-    assertThat(underTest.getAll())
-      .containsExactly(
-        "-XX:+UseConcMarkSweepGC",
-        "-XX:CMSInitiatingOccupancyFraction=75",
-        "-XX:+UseCMSInitiatingOccupancyOnly",
-        "-Des.networkaddress.cache.ttl=60",
-        "-Des.networkaddress.cache.negative.ttl=10",
-        "-XX:+AlwaysPreTouch",
-        "-Xss1m",
-        "-Djava.awt.headless=true",
-        "-Dfile.encoding=UTF-8",
-        "-Djna.nosys=true",
-        "-XX:-OmitStackTraceInFastThrow",
-        "-Dio.netty.noUnsafe=true",
-        "-Dio.netty.noKeySetOptimization=true",
-        "-Dio.netty.recycler.maxCapacityPerThread=0",
-        "-Dlog4j.shutdownHookEnabled=false",
-        "-Dlog4j2.disable.jmx=true",
-        "-Djava.io.tmpdir=" + tmpDir.getAbsolutePath(),
-        "-XX:ErrorFile=../logs/es_hs_err_pid%p.log",
-        "-XX:UseAVX=2",
-        "-Des.enforce.bootstrap.checks=true");
   }
 
   /**
